# Codemancer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.uk.md  index.html  package.json  pnpm-lock.yaml  roadmap.md  setup.sh  vite.config.ts
backend/: main.py  pyproject.toml
backend/models/: chat.py  chronicle.py  conversation.py  dependency.py  file.py  git.py  health.py  mission.py  player.py  project.py  quest.py  signal_refinery.py  supervisor.py  telegram.py
backend/routes/: chat.py  chronicle.py  commands.py  conversations.py  dependency.py  files.py  game.py  git.py  health.py  missions.py  proactive.py  project.py  quests.py  refinery.py  repair.py  settings.py  supervisor.py  telegram.py
backend/services/: agentic_supervisor.py  chronicle_service.py  context_aggregator.py  dependency_service.py  exp_service.py  file_service.py  git_service.py  health_service.py  mission_scanner.py  mission_synthesizer.py  quest_service.py  signal_poller.py  todo_parser.py  tool_schemas.py  tools.py
backend/services/providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  gemini_provider.py  openai_provider.py
backend/services/signals/: __init__.py  base_provider.py  github_provider.py  jira_provider.py  slack_provider.py  telegram_provider.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/commands/: commandRegistry.ts
src/hooks/: useAgentActivity.ts  useApi.ts  useAudio.ts  useEditorRef.tsx  (+7 more)
(+55 files in other folders)
